Fixed <em> not being visible in <blockquote>

--- a/src/sass/jansensan-stylesheet.scss
+++ b/src/sass/jansensan-stylesheet.scss
@@ -97,6 +97,10 @@ blockquote {
   p {
     text-align: justify;
   }
+
+  em {
+    font-style: normal;
+  }
 }
 
 input[type="text"],
